--- a/view/partial/page-header.html
+++ b/view/partial/page-header.html
@@ -20,7 +20,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
   <div class="header">
     <div class="container" style="display: flex; align-items: center;">
       <a href="/">
-        <img src="https://www.devfi.com/wp-content/uploads/2022/03/logo.gif.gif" alt="devfi-logo" width="100" height="50">
+        <img src="https://tekstripes.com/wp-content/uploads/2025/06/logo.svg" alt="devfi-logo" width="100" height="50">
       </a>
       <div class="col-md-6 col-md-offset-3">
         <span style="font-size: 3rem; font-weight: bold; margin-right: 30px;">Webpage Accessibility Tester</span>
